fix: monitoring stack deployment issues
  - postgres-exporter: use correct secret key DB_USERNAME
  - redis-exporter: use rediss:// for TLS connection to ElastiCache
  - prometheus/grafana/loki: use Recreate strategy to avoid PVC lock conflicts

--- a/k8s/helm/charts/wealist-monitoring/templates/exporters/postgres-exporter.yaml
+++ b/k8s/helm/charts/wealist-monitoring/templates/exporters/postgres-exporter.yaml
@@ -48,7 +48,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: wealist-shared-secret
-                  key: DB_USER
+                  key: DB_USERNAME
             - name: DATA_SOURCE_PASS
               valueFrom:
                 secretKeyRef:
