--- a/k8s/helm/charts/wealist-monitoring/templates/exporters/redis-exporter.yaml
+++ b/k8s/helm/charts/wealist-monitoring/templates/exporters/redis-exporter.yaml
@@ -48,9 +48,12 @@ spec:
                 secretKeyRef:
                   name: wealist-shared-secret
                   key: REDIS_PASSWORD
-            # redis:// for non-SSL, rediss:// for SSL (AWS ElastiCache uses SSL)
+            # rediss:// for SSL/TLS (AWS ElastiCache requires TLS)
             - name: REDIS_ADDR
-              value: "redis://$(REDIS_HOST):{{ .Values.redisExporter.config.port }}"
+              value: "rediss://$(REDIS_HOST):{{ .Values.redisExporter.config.port }}"
+            # Skip TLS verification for ElastiCache (uses Amazon CA)
+            - name: REDIS_EXPORTER_SKIP_TLS_VERIFICATION
+              value: "true"
             {{- else }}
             # Local/Dev: values에서 직접 가져옴
             - name: REDIS_ADDR
