--- a/k8s/helm/charts/wealist-monitoring/templates/prometheus/configmap.yaml
+++ b/k8s/helm/charts/wealist-monitoring/templates/prometheus/configmap.yaml
@@ -116,6 +116,58 @@ data:
       {{- end }}
 
       # ==========================================================================
+      # kube-state-metrics (Kubernetes Objects State)
+      # ==========================================================================
+      {{- if .Values.kubeStateMetrics.enabled }}
+      - job_name: 'kube-state-metrics'
+        static_configs:
+          - targets: ['kube-state-metrics:{{ .Values.kubeStateMetrics.service.port }}']
+        metrics_path: '/metrics'
+      {{- end }}
+
+      # ==========================================================================
+      # node-exporter (Node System Metrics)
+      # ==========================================================================
+      {{- if .Values.nodeExporter.enabled }}
+      - job_name: 'node-exporter'
+        kubernetes_sd_configs:
+          - role: pod
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_pod_label_app]
+            action: keep
+            regex: node-exporter
+          - source_labels: [__meta_kubernetes_pod_node_name]
+            action: replace
+            target_label: node
+          - source_labels: [__meta_kubernetes_pod_host_ip]
+            action: replace
+            regex: (.+)
+            replacement: $1:{{ .Values.nodeExporter.service.port }}
+            target_label: __address__
+      {{- end }}
+
+      # ==========================================================================
+      # kubelet cAdvisor (Container Metrics)
+      # ==========================================================================
+      - job_name: 'kubelet-cadvisor'
+        scheme: https
+        tls_config:
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+          insecure_skip_verify: true
+        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        kubernetes_sd_configs:
+          - role: node
+        relabel_configs:
+          - action: labelmap
+            regex: __meta_kubernetes_node_label_(.+)
+          - target_label: __address__
+            replacement: kubernetes.default.svc:443
+          - source_labels: [__meta_kubernetes_node_name]
+            regex: (.+)
+            target_label: __metrics_path__
+            replacement: /api/v1/nodes/$1/proxy/metrics/cadvisor
+
+      # ==========================================================================
       # Kubernetes Service Discovery (Pod Annotations)
       # ==========================================================================
       # Note: Excludes services with dedicated static scrape jobs above
