--- a/.github/workflows/ci-pr-validation.yaml
+++ b/.github/workflows/ci-pr-validation.yaml
@@ -129,6 +129,10 @@ jobs:
           echo 'replace github.com/OrangesCloud/wealist-advanced-go-pkg => ../../packages/wealist-advanced-go-pkg' >> go.mod
           go mod tidy
 
+          # 공통 패키지를 먼저 빌드 (golangci-lint가 export data를 찾을 수 있도록)
+          cd ../../packages/wealist-advanced-go-pkg
+          go build ./...
+
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v7
         with:
