--- a/k8s/helm/charts/wealist-monitoring/templates/tempo/deployment.yaml
+++ b/k8s/helm/charts/wealist-monitoring/templates/tempo/deployment.yaml
@@ -19,6 +19,7 @@ spec:
         prometheus.io/scrape: "true"
         prometheus.io/port: "{{ .Values.tempo.service.httpPort }}"
     spec:
+      serviceAccountName: tempo
       containers:
         - name: tempo
           image: {{ .Values.tempo.image.repository }}:{{ .Values.tempo.image.tag }}
