feat(monitoring): 모니터링 스택 버전 업그레이드 + Loki S3 + Promtail→Alloy 마이그레이션
  ## 버전 업그레이드
  - Prometheus: v2.48.0 → v2.56.1
  - Grafana: 10.2.2 → 10.4.12
  - Loki: 2.9.2 → 2.10.6
  - OTEL Collector: 0.92.0 → 0.116.0
  - kube-state-metrics: v2.10.1 → v2.14.0
  - node-exporter: v1.7.0 → v1.9.0

  ## Loki S3 스토리지
  - Terraform: S3 버킷 + Pod Identity 추가
  - Helm: ServiceAccount, S3 ConfigMap 설정

  ## Promtail → Alloy 마이그레이션
  - Promtail 비활성화
  - Alloy 1.5.0 DaemonSet 추가 (Grafana 공식 후속작)

--- a/k8s/helm/charts/wealist-monitoring/templates/loki/configmap.yaml
+++ b/k8s/helm/charts/wealist-monitoring/templates/loki/configmap.yaml
@@ -12,9 +12,15 @@ data:
     common:
       path_prefix: /loki
       storage:
+        {{- if .Values.loki.config.s3.enabled }}
+        s3:
+          s3: s3://{{ .Values.loki.config.s3.region }}/{{ .Values.loki.config.s3.bucket }}
+          s3forcepathstyle: false
+        {{- else }}
         filesystem:
           chunks_directory: /loki/chunks
           rules_directory: /loki/rules
+        {{- end }}
       replication_factor: 1
       ring:
         kvstore:
@@ -22,14 +28,41 @@ data:
     schema_config:
       configs:
         - from: 2020-10-24
-          store: boltdb-shipper
-          object_store: filesystem
-          schema: v11
+          store: tsdb
+          object_store: {{ if .Values.loki.config.s3.enabled }}s3{{ else }}filesystem{{ end }}
+          schema: v13
           index:
             prefix: index_
             period: 24h
+    storage_config:
+      {{- if .Values.loki.config.s3.enabled }}
+      aws:
+        region: {{ .Values.loki.config.s3.region }}
+        bucketnames: {{ .Values.loki.config.s3.bucket }}
+        s3forcepathstyle: false
+      tsdb_shipper:
+        active_index_directory: /loki/tsdb-index
+        cache_location: /loki/tsdb-cache
+      {{- else }}
+      filesystem:
+        directory: /loki/chunks
+      boltdb_shipper:
+        active_index_directory: /loki/index
+        cache_location: /loki/cache
+        shared_store: filesystem
+      {{- end }}
     limits_config:
       enforce_metric_name: false
       reject_old_samples: true
       reject_old_samples_max_age: 168h
+      max_cache_freshness_per_query: 10m
+      split_queries_by_interval: 15m
+    {{- if .Values.loki.config.s3.enabled }}
+    compactor:
+      working_directory: /loki/compactor
+      compaction_interval: 10m
+      retention_enabled: true
+      retention_delete_delay: 2h
+      retention_delete_worker_count: 150
+    {{- end }}
 {{- end }}
