--- a/k8s/helm/charts/wealist-monitoring/values.yaml
+++ b/k8s/helm/charts/wealist-monitoring/values.yaml
@@ -140,9 +140,14 @@ loki:
     retentionPeriod: 168h  # 7 days
     ingestionRateMB: 10
     ingestionBurstSizeMB: 20
+    # S3 Storage Backend (prod용)
+    s3:
+      enabled: false
+      bucket: ""
+      region: ""
 
 # =============================================================================
-# Promtail - Log Collector
+# Promtail - Log Collector (Legacy - use Alloy instead)
 # =============================================================================
 promtail:
   enabled: true
@@ -163,6 +168,27 @@ promtail:
   config:
     # Loki endpoint
     lokiUrl: http://loki:3100/loki/api/v1/push
+
+# =============================================================================
+# Alloy - Modern Log Collector (Promtail Replacement)
+# =============================================================================
+# Grafana Alloy is the successor to Promtail with improved performance
+# and native support for all Grafana LGTM stack components
+alloy:
+  enabled: false  # Enable in prod (replaces Promtail)
+
+  image:
+    repository: grafana/alloy
+    tag: "1.5.0"
+    pullPolicy: IfNotPresent
+
+  resources:
+    requests:
+      memory: "128Mi"
+      cpu: "50m"
+    limits:
+      memory: "256Mi"
+      cpu: "200m"
 
 # =============================================================================
 # Grafana - Visualization Dashboard
