--- a/k8s/helm/environments/prod.yaml
+++ b/k8s/helm/environments/prod.yaml
@@ -392,7 +392,7 @@ prometheus:
   enabled: true
   image:
     repository: prom/prometheus
-    tag: "v2.48.0"
+    tag: "v2.56.1"  # v2.48.0 → v2.56.1 (2025-12 안정 버전)
   config:
     externalUrl: "https://api.wealist.co.kr/api/monitoring/prometheus"
     routePrefix: "/api/monitoring/prometheus"
@@ -410,12 +410,14 @@ prometheus:
       memory: "1Gi"  # 기본 512Mi → 1Gi (WAL replay OOMKilled 방지)
       cpu: "500m"
 
-# Loki - 로그 수집
+# Loki - 로그 수집 (S3 백엔드)
 loki:
   enabled: true
   image:
     repository: grafana/loki
-    tag: "2.9.2"
+    tag: "2.10.6"  # 2.9.2 → 2.10.6 (2025-12 안정 버전)
+  persistence:
+    enabled: false  # S3 사용 시 PVC 불필요
   resources:
     requests:
       memory: "256Mi"
@@ -423,20 +425,36 @@ loki:
     limits:
       memory: "512Mi"  # 기본 256Mi → 512Mi (실사용 127Mi, 여유 확보)
       cpu: "300m"
+  config:
+    s3:
+      enabled: true
+      bucket: "wealist-prod-loki-logs-290008131187"
+      region: "ap-northeast-2"
 
-# Promtail - 로그 수집 에이전트
+# Promtail - 로그 수집 에이전트 (Alloy로 대체)
 promtail:
+  enabled: false  # Alloy로 마이그레이션
+
+# Alloy - 로그 수집 에이전트 (Promtail 대체)
+alloy:
   enabled: true
   image:
-    repository: grafana/promtail
-    tag: "2.9.2"
+    repository: grafana/alloy
+    tag: "1.5.0"  # 2025-12 최신 안정 버전
+  resources:
+    requests:
+      memory: "128Mi"
+      cpu: "50m"
+    limits:
+      memory: "256Mi"
+      cpu: "200m"
 
 # Grafana - 시각화 대시보드
 grafana:
   enabled: true
   image:
     repository: grafana/grafana
-    tag: "10.2.2"
+    tag: "10.4.12"  # 10.2.2 → 10.4.12 (2025-12 안정 버전)
   resources:
     requests:
       memory: "192Mi"
@@ -459,7 +477,7 @@ kubeStateMetrics:
   enabled: true
   image:
     repository: registry.k8s.io/kube-state-metrics/kube-state-metrics
-    tag: "v2.10.1"
+    tag: "v2.14.0"  # v2.10.1 → v2.14.0 (2025-12 안정 버전)
 
 # node-exporter (노드 시스템 메트릭)
 # Kubernetes Cluster 대시보드의 노드 CPU/메모리 사용률에 필요
@@ -467,7 +485,7 @@ nodeExporter:
   enabled: true
   image:
     repository: prom/node-exporter
-    tag: "v1.7.0"
+    tag: "v1.9.0"  # v1.7.0 → v1.9.0 (2025-12 안정 버전)
 
 # ArgoCD 메트릭 수집
 argocd:
@@ -509,7 +527,7 @@ otelCollector:
   enabled: true
   image:
     repository: otel/opentelemetry-collector-contrib
-    tag: "0.92.0"
+    tag: "0.116.0"  # 0.92.0 → 0.116.0 (2025-12 안정 버전)
   replicas: 2  # Production HA
   service:
     otlpGrpcPort: 4317
@@ -533,7 +551,7 @@ tempo:
   enabled: true
   image:
     repository: grafana/tempo
-    tag: "2.3.1"
+    tag: "2.6.1"  # 2.6.0+: EKS Pod Identity 지원
   service:
     httpPort: 3200
     otlpGrpcPort: 4317
