feat(otel): DB/Redis 분산 추적 및 버전 업그레이드
  - OTEL Collector 0.92.0 → 0.114.0, Tempo 2.6.1 → 2.9.0 업그레이드
  - Go 공통 패키지에 GORM/Redis OTel 트레이싱 헬퍼 추가
  - 6개 Go 서비스에 DB/Redis 트레이싱 적용
  - auth-service에 Micrometer Tracing + OTEL 통합
  - MONITORING.md에 OpenTelemetry 섹션 추가

  영향 범위:
  - board, user, chat, noti, storage, video 서비스
  - auth-service (Spring Boot)
  - prod.yaml, values.yaml

--- a/k8s/helm/charts/wealist-monitoring/values.yaml
+++ b/k8s/helm/charts/wealist-monitoring/values.yaml
@@ -464,7 +464,7 @@ otelCollector:
 
   image:
     repository: otel/opentelemetry-collector-contrib
-    tag: "0.92.0"  # 2025년 최신 안정 버전
+    tag: "0.114.0"  # 2025-12 최신 안정 버전
     pullPolicy: IfNotPresent
 
   replicas: 1  # prod에서 2로 증가
@@ -501,7 +501,7 @@ tempo:
 
   image:
     repository: grafana/tempo
-    tag: "2.3.1"
+    tag: "2.9.0"  # 2025-12 최신 안정 버전
     pullPolicy: IfNotPresent
 
   replicas: 1
